--- a/templates/index.html
+++ b/templates/index.html
@@ -87,6 +87,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid justify-content-center">
             <a class="navbar-brand" onclick="window.location.href='/'" style="cursor: pointer;">
+                HealthMate - AI
             </a>
         </div>
     </nav>
